Code clean up